--- a/ocamlformat-rpc.opam
+++ b/ocamlformat-rpc.opam
@@ -24,7 +24,7 @@ depends: [
   "menhir" {>= "20180528"}
   "menhirLib" {>= "20200624"}
   "menhirSdk" {>= "20200624"}
-  "ocp-indent" {with-test}
+  "ocp-indent"
   "bisect_ppx" {with-test & >= "2.5.0"}
   "odoc" {>= "1.4.2"}
   "ppxlib" {>= "0.22.0"}
