Disable failing tests on windows
This adds `(enabled_if)` to tests that do not pass on Windows today.
The resulting situation is that `dune runtest` works on Windows, and
corresponding tests can be fixed on a longer schedule.

Signed-off-by: Etienne Millon <me@emillon.org>

--- a/test/cli/dune
+++ b/test/cli/dune
@@ -1,3 +1,8 @@
 (cram
  (package ocamlformat)
  (deps %{bin:ocamlformat}))
+
+(cram
+ (applies_to large_string)
+ (enabled_if
+  (<> %{os_type} Win32)))
