--- a/test/disabled/dune
+++ b/test/disabled/dune
@@ -3,6 +3,8 @@
  (deps
   (source_tree dir1))
  (package ocamlformat)
+ (enabled_if
+  (<> %{os_type} Win32))
  (action
   (run %{bin:ocamlformat} -n 1 -i dir1/dir2/ignore_1.ml)))
 
@@ -11,5 +13,7 @@
  (deps
   (source_tree dir1))
  (package ocamlformat)
+ (enabled_if
+  (<> %{os_type} Win32))
  (action
   (run %{bin:ocamlformat} -n 1 -i dir1/dir2/ignore_2.ml)))
