--- a/test/projects/dune
+++ b/test/projects/dune
@@ -34,6 +34,8 @@
 (rule
  (alias runtest)
  (package ocamlformat)
+ (enabled_if
+  (<> %{os_type} Win32))
  (action
   (diff outside_detected_project.expected outside_detected_project.output)))
 
