--- a/test/rpc/dune
+++ b/test/rpc/dune
@@ -4,6 +4,8 @@
  (deps %{bin:ocamlformat-rpc})
  (modules rpc_test)
  (package ocamlformat-rpc)
+ (enabled_if
+  (<> %{os_type} Win32))
  (action
   (run %{test} %{bin:ocamlformat-rpc})))
 
