--- a/bin/ocamlformat/dune
+++ b/bin/ocamlformat/dune
@@ -15,7 +15,7 @@
  (package ocamlformat)
  (modules main)
  (flags
-  (:standard -open Base -open Import))
+  (:standard -open Base -open Stdio -open Import))
  (instrumentation
   (backend bisect_ppx))
  (libraries ocamlformat_lib))
