--- a/lib/dune
+++ b/lib/dune
@@ -14,7 +14,7 @@
 (library
  (name ocamlformat_lib)
  (flags
-  (:standard -open Base -open Import -open Compat))
+  (:standard -open Base -open Stdio -open Import -open Compat))
  (instrumentation
   (backend bisect_ppx))
  (libraries
