--- a/bin/ocamlformat-rpc/dune
+++ b/bin/ocamlformat-rpc/dune
@@ -14,7 +14,7 @@
  (public_name ocamlformat-rpc)
  (package ocamlformat-rpc)
  (flags
-  (:standard -open Import))
+  (:standard -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
  (libraries ocamlformat_lib ocamlformat-rpc-lib))
