--- a/lib/dune
+++ b/lib/dune
@@ -14,20 +14,18 @@
 (library
  (name ocamlformat_lib)
  (flags
-  (:standard -open Base -open Import -open Compat))
+  (:standard -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
  (libraries
   format_
-  import
   ocaml-version
+  ocamlformat_stdlib
   odoc.model
   odoc.parser
   parse_wyc
   re
   uuseg
   uuseg.string
-  token_latest
-  compat
   dune-build-info
   ppxlib))
