Extract portable parts of ocamlformat_lib to ocamlformat_kernel
- Rename lib/ to lib-kernel/
- Move Translation_unit.Error.print into lib/

--- a/lib-kernel/dune
+++ b/lib-kernel/dune
@@ -9,10 +9,23 @@
 ;                                                                        ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
+(ocamllex Literal_lexer)
+
 (library
- (name ocamlformat_lib)
+ (name ocamlformat_kernel)
  (flags
   (:standard -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
- (libraries ocamlformat_kernel))
+ (libraries
+  format_
+  ocaml-version
+  ocamlformat_stdlib
+  odoc.model
+  odoc.parser
+  parse_wyc
+  re
+  uuseg
+  uuseg.string
+  dune-build-info
+  ppxlib))
