--- a/test/unit/dune
+++ b/test/unit/dune
@@ -1,4 +1,4 @@
 (test
  (name test_unit)
  (package ocamlformat)
- (libraries alcotest base ocamlformat_unix))
+ (libraries alcotest base ocamlformat_lib))
