--- a/.github/workflows/build-mingw64.yml
+++ b/.github/workflows/build-mingw64.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   CYGWINSETUP: setup-x86_64.exe
-  PACKAGES: make,curl,unzip,mingw64-x86_64-binutils,mingw64-x86_64-gcc-core,mingw64-x86_64-headers,mingw64-x86_64-runtime
+  PACKAGES: git,m4,rsync,patchutils,make,curl,unzip,mingw64-x86_64-binutils,mingw64-x86_64-gcc-core,mingw64-x86_64-headers,mingw64-x86_64-runtime
   SITE: https://mirrors.kernel.org/sourceware/cygwin
 
 jobs:
@@ -18,24 +18,24 @@ jobs:
     env:
       SHELLOPTS: igncr
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v1
         with:
           ref: ${{ github.event.inputs.ref }}
-      - name: Download Cygwin installer
+      - name: Download Cygwin Installer
         run: |
           curl.exe -o C:\${{ env.CYGWINSETUP }} https://www.cygwin.com/${{ env.CYGWINSETUP }}
         shell: cmd
       - name: Setup Cygwin
         run: |
-          C:\${{ env.CYGWINSETUP }} -A -q -D -L -g -o -s ${{ env.SITE }} -l %LOCALAPPDATA%\cygwin64 -R C:\cygwin64 -C Base -P ${{ env.PACKAGES }}
+          C:\${{ env.CYGWINSETUP }} -A -q -D -L -g -o -s ${{ env.SITE }} -l C:\cygwin64-cache -R C:\cygwin64 -C Base -P ${{ env.PACKAGES }}
         shell: cmd
-      - name: Run build script
+      - name: Run Build Script
         run: |
           cd '${{ github.workspace }}'
           bash tools/build-mingw64.sh
         shell: C:\cygwin64\bin\bash.exe --login --norc '{0}'
-      - name: Upload artifact
+      - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
           name: ocamlformat-${{ github.event.inputs.ref }}.exe
