Include LGPL 2.1 license of compiler vendored code

--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -5,7 +5,8 @@ description:
   "OCamlFormat is a tool to automatically format OCaml code in a uniform style."
 maintainer: ["OCamlFormat Team <ocamlformat-dev@lists.ocaml.org>"]
 authors: ["Josh Berdine <jjb@fb.com>"]
-license: "MIT"
+license:
+  "OCamlFormat is distributed under the MIT license. Parts of the OCaml library are vendored for OCamlFormat and distributed under their original LGPL 2.1 license."
 homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
