--- a/test/rpc/dune
+++ b/test/rpc/dune
@@ -10,9 +10,21 @@
   (run %{test} %{bin:ocamlformat-rpc})))
 
 (test
- (name rpc_test_fail)
+ (name rpc_test_fail_lt412)
  (libraries ocamlformat-rpc-lib unix)
- (modules rpc_test_fail)
+ (modules rpc_test_fail_lt412)
  (package ocamlformat-rpc)
+ (enabled_if
+  (< %{ocaml_version} 4.12.0))
+ (action
+  (run %{test} not-installed-ocamlformat-rpc)))
+
+(test
+ (name rpc_test_fail_ge412)
+ (libraries ocamlformat-rpc-lib unix)
+ (modules rpc_test_fail_ge412)
+ (package ocamlformat-rpc)
+ (enabled_if
+  (>= %{ocaml_version} 4.12.0))
  (action
   (run %{test} not-installed-ocamlformat-rpc)))
