--- a/bench/dune
+++ b/bench/dune
@@ -12,12 +12,12 @@
 (executable
  (name bench)
  (public_name bench)
- (package ocamlformat)
+ (package ocamlformat-bench)
  (libraries bechamel bechamel-js ocamlformat_lib stdio yojson))
 
 (rule
  (alias runbench)
- (package ocamlformat)
+ (package ocamlformat-bench)
  (deps
   (source_tree test)
   %{bin:bench})
