--- a/test-extra/Makefile
+++ b/test-extra/Makefile
@@ -47,6 +47,8 @@ code/mirage: URI = https://github.com/mirage/mirage
 code/dune-release: URI = https://github.com/ocamllabs/dune-release
 code/owl: URI = https://github.com/owlbarn/owl
 
+PRUNE_DIRS += code/mirage/test code/owl/examples
+
 code/base: URI = https://github.com/janestreet/base.git
 code/base_bigstring: URI = https://github.com/janestreet/base_bigstring.git
 code/base_quickcheck: URI = https://github.com/janestreet/base_quickcheck.git
