--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -14,7 +14,7 @@ depends: [
   "base" {>= "v0.12.0" & < "v0.15"}
   "bechamel"
   "bechamel-js"
-  "cmdliner"
+  "cmdliner" {>= "1.1.0"}
   "dune-build-info"
   "either"
   "fix"
