--- a/ocamlformat-rpc.opam
+++ b/ocamlformat-rpc.opam
@@ -13,7 +13,7 @@ depends: [
   "ocamlformat-rpc-lib"
   "alcotest" {with-test}
   "base" {>= "v0.12.0" & < "v0.15"}
-  "cmdliner"
+  "cmdliner" {>= "1.1.0"}
   "dune-build-info"
   "either"
   "fix"
