--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -12,7 +12,7 @@ depends: [
   "ocaml" {>= "4.08" & < "4.15"}
   "alcotest" {with-test}
   "base" {>= "v0.12.0" & < "v0.15"}
-  "cmdliner"
+  "cmdliner" {>= "1.1.0"}
   "dune-build-info"
   "either"
   "fix"
