--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -8,11 +8,11 @@ authors: ["Josh Berdine <jjb@fb.com>"]
 homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
-  "dune" {>= "2.8"}
   "ocaml" {>= "4.08" & < "4.15"}
   "alcotest" {with-test}
   "base" {>= "v0.12.0" & < "v0.15"}
   "cmdliner" {>= "1.1.0"}
+  "dune" {>= "2.8" & with-test & < "3.0"}
   "dune-build-info"
   "either"
   "fix"
