Depend on bechamel.0.2.0

--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -12,8 +12,8 @@ depends: [
   "ocaml" {>= "4.08" & < "4.15"}
   "alcotest" {with-test}
   "base" {>= "v0.12.0" & < "v0.15"}
-  "bechamel"
-  "bechamel-js"
+  "bechamel" {>= "0.2.0"}
+  "bechamel-js" {>= "0.2.0"}
   "cmdliner" {>= "1.1.0"}
   "dune-build-info"
   "either"
