--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -13,6 +13,7 @@ depends: [
   "alcotest" {with-test}
   "bechamel" {>= "0.2.0"}
   "bechamel-js" {>= "0.2.0"}
+  "bos"
   "ocamlformat" {= version}
   "stdio"
   "yojson"
