Expose ocamlformat libraries

--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -11,24 +11,10 @@ depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08" & < "4.15"}
   "alcotest" {with-test}
-  "base" {>= "v0.12.0" & < "v0.15"}
+  "ocamlformat" {= version}
   "bechamel" {>= "0.2.0"}
   "bechamel-js" {>= "0.2.0"}
-  "cmdliner" {>= "1.1.0"}
-  "dune-build-info"
-  "either"
-  "fix"
-  "fpath"
-  "menhir" {>= "20201216"}
-  "menhirLib" {>= "20201216"}
-  "menhirSdk" {>= "20201216"}
-  "ocaml-version" {>= "3.3.0"}
-  "ocp-indent"
-  "odoc-parser" {>= "1.0.0"}
-  "re" {>= "1.7.2"}
   "stdio" {< "v0.15"}
-  "uuseg" {>= "10.0.0"}
-  "uutf" {>= "1.0.1"}
   "yojson"
   "odoc" {with-doc}
 ]
