Move RPC code to ocamlformat-rpc library

--- a/bin/ocamlformat-rpc/dune
+++ b/bin/ocamlformat-rpc/dune
@@ -17,7 +17,7 @@
   (:standard -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
- (libraries ocamlformat ocamlformat-rpc-lib))
+ (libraries ocamlformat-rpc))
 
 (rule
  (with-stdout-to
