--- a/lib/dune
+++ b/lib/dune
@@ -14,7 +14,8 @@
 (ocamllex Toplevel_lexer)
 
 (library
- (name ocamlformat_lib)
+ (name ocamlformat)
+ (public_name ocamlformat)
  (flags
   (:standard
    -open
