--- a/ocamlformat-rpc-lib.opam
+++ b/ocamlformat-rpc-lib.opam
@@ -11,7 +11,7 @@ bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08" & < "4.15"}
-  "csexp"
+  "csexp" {>= "1.4.0"}
   "odoc" {with-doc}
 ]
 build: [
