Put ocamlformat-rpc binary in ocamlformat package

--- a/bin/ocamlformat-rpc/dune
+++ b/bin/ocamlformat-rpc/dune
@@ -12,12 +12,12 @@
 (executable
  (name main)
  (public_name ocamlformat-rpc)
- (package ocamlformat-rpc)
+ (package ocamlformat)
  (flags
   (:standard -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
- (libraries ocamlformat-rpc))
+ (libraries ocamlformat.rpc))
 
 (rule
  (with-stdout-to
@@ -27,7 +27,7 @@
 (install
  (section man)
  (files ocamlformat-rpc.1)
- (package ocamlformat-rpc))
+ (package ocamlformat))
 
 (documentation
- (package ocamlformat-rpc))
+ (package ocamlformat))
