--- a/test/rpc/dune
+++ b/test/rpc/dune
@@ -6,7 +6,7 @@
   small_margin/.ocamlformat
   big_margin/.ocamlformat)
  (modules rpc_test)
- (package ocamlformat-rpc)
+ (package ocamlformat)
  (enabled_if
   (<> %{os_type} Win32))
  (action
@@ -16,6 +16,6 @@
  (name rpc_test_fail)
  (libraries ocamlformat-rpc-lib unix)
  (modules rpc_test_fail)
- (package ocamlformat-rpc)
+ (package ocamlformat)
  (action
   (run %{test} not-installed-ocamlformat-rpc)))
