--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -14,7 +14,7 @@ depends: [
   "bechamel" {>= "0.2.0"}
   "bechamel-js" {>= "0.2.0"}
   "ocamlformat" {= version}
-  "stdio" {< "v0.16"}
+  "stdio"
   "yojson"
   "odoc" {with-doc}
 ]
