--- a/ocamlformat-rpc-lib.opam
+++ b/ocamlformat-rpc-lib.opam
@@ -10,7 +10,7 @@ homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "2.8"}
-  "ocaml" {>= "4.08" & < "4.15"}
+  "ocaml" {>= "4.08"}
   "csexp" {>= "1.4.0"}
   "odoc" {with-doc}
 ]
