--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -22,6 +22,7 @@ depends: [
   "menhirLib" {>= "20201216"}
   "menhirSdk" {>= "20201216"}
   "ocaml-version" {>= "3.3.0"}
+  "ocamlformat-rpc-lib" {with-test & post & = version}
   "ocp-indent"
   "odoc-parser" {>= "1.0.0"}
   "re" {>= "1.7.2"}
