--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,19 @@ jobs:
   docker:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        include:
+          - variant: debian
+            variant-version: 11
+            ocaml-version: 4.14
+          - variant: alpine
+            variant-version: 3.15
+            ocaml-version: 4.14
+
     env:
+      # Default variant that should also be tagged without extra suffix
+      VARIANT_DEFAULT: debian
       REGISTRY: ghcr.io
       NAMESPACE: ${{ github.repository_owner }}
 
@@ -55,9 +67,26 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build
-        uses: docker/build-push-action@v3
+      - uses: docker/metadata-action@v4
+        id: meta
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/ocamlformat
+          tags: |
+            type=semver,pattern={{version}},suffix=-${{ matrix.variant }}
+            type=semver,pattern={{major}}.{{minor}},suffix=-${{ matrix.variant }}
+            type=semver,pattern={{major}},suffix=-${{ matrix.variant }}
+
+            type=semver,pattern={{version}},enable=${{ matrix.variant == env.VARIANT_DEFAULT }}
+            type=semver,pattern={{major}}.{{minor}},enable=${{ matrix.variant == env.VARIANT_DEFAULT }}
+            type=semver,pattern={{major}},enable=${{ matrix.variant == env.VARIANT_DEFAULT }}
+
+      - uses: docker/build-push-action@v3
         with:
           context: .
-          pull: true
+          build-args: |
+            VARIANT=${{ matrix.variant }}
+            VARIANT_VERSION=${{ matrix.variant-version }}
+            OCAML_VERSION=${{ matrix.ocaml-version }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name == 'workflow_dispatch' }}
