--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -21,7 +21,9 @@ jobs:
 
     steps:
       # Clone the project
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
 
       # Setup
       - name: Setup OCaml ${{ matrix.ocaml-version }}
