--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -36,15 +36,18 @@ jobs:
 
       - name: Test conventional profile
         run: |
-          git checkout main
+          git fetch origin main --depth 1
+          git checkout origin/main
           tools/test_branch.sh -- -a main -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
       
       - name: Test ocamlformat profile
         run: |
-          git checkout main
+          git fetch origin main --depth 1
+          git checkout origin/main
           tools/test_branch.sh -- -a main -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
 
       - name: Test janestreet profile
         run: |
-          git checkout main
+          git fetch origin main --depth 1
+          git checkout origin/main
           tools/test_branch.sh -- -a main -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
