--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -23,7 +23,7 @@ jobs:
       # Clone the project
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
       # Setup
       - name: Setup OCaml ${{ matrix.ocaml-version }}
@@ -36,18 +36,12 @@ jobs:
 
       - name: Test conventional profile
         run: |
-          git fetch origin main --depth 1
-          git checkout origin/main
-          tools/test_branch.sh -- -a origin/main -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
+          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
       
       - name: Test ocamlformat profile
         run: |
-          git fetch origin main --depth 1
-          git checkout origin/main
-          tools/test_branch.sh -- -a origin/main -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
+          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
 
       - name: Test janestreet profile
         run: |
-          git fetch origin main --depth 1
-          git checkout origin/main
-          tools/test_branch.sh -- -a origin/main -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
+          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
