--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -35,13 +35,13 @@ jobs:
         run: opam install --deps-only -t .
 
       - name: Test conventional profile
-        run: |
-          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
-      
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
+        shell: bash
+
       - name: Test ocamlformat profile
-        run: |
-          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
+        shell: bash
 
       - name: Test janestreet profile
-        run: |
-          tools/test_branch.sh -- -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
+        shell: bash
