--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -2,10 +2,6 @@ name: Test branch
 
 on:
   pull_request:
-  workflow_dispatch:
-
-env:
- BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
   build:
@@ -35,13 +31,13 @@ jobs:
         run: opam install --deps-only -t .
 
       - name: Test conventional profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=conventional'
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b ${{ github.event.pull_request.head.ref }} 'profile=conventional'
         shell: bash
 
       - name: Test ocamlformat profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=ocamlformat'
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b ${{ github.event.pull_request.head.ref }' 'profile=ocamlformat'
         shell: bash
 
       - name: Test janestreet profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b '${{ env.BRANCH_NAME }}' 'profile=janestreet'
+        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b ${{ github.event.pull_request.head.ref } 'profile=janestreet'
         shell: bash
