--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -32,13 +32,13 @@ jobs:
         run: opam install --deps-only -t .
 
       - name: Test conventional profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b HEAD 'profile=conventional'
+        run: ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=conventional'
         shell: bash
 
       - name: Test ocamlformat profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b HEAD 'profile=ocamlformat'
+        run: ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=ocamlformat'
         shell: bash
 
       - name: Test janestreet profile
-        run: ./tools/test_branch.sh -a ${{ github.event.pull_request.base.ref }} -b HEAD 'profile=janestreet'
+        run: ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=janestreet'
         shell: bash
