--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -33,7 +33,7 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
       - name: Opam dependencies
-        run: opam install -t ./ocamlformat.opam
+        run: opam install --deps-only -t ./ocamlformat.opam
 
       - name: Test ${{ matrix.profile }} profile
         run: opam exec -- ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=${{ matrix.profile }}'
