Revert "Tests: reset .ocamlformat using profile=default (#2124)"
This reverts commit dbd498c2ddd14c6ffa50da51858353fd713785c9.

--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -13,6 +13,7 @@ depends: [
   "base" {>= "v0.12.0"}
   "cmdliner" {>= "1.1.0"}
   "dune" {>= "2.8"}
+  "dune" {with-test & < "3.0"}
   "dune-build-info"
   "either"
   "fix"
