--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -10,7 +10,7 @@ bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08"}
-  "alcotest" {with-test}
+  "alcotest" {with-test & >= "1.0.0"}
   "bechamel" {>= "0.2.0"}
   "bechamel-js" {>= "0.2.0"}
   "ocamlformat" {= version}
