--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -22,7 +22,7 @@ depends: [
   "menhirSdk" {>= "20201216"}
   "ocaml-version" {>= "3.5.0"}
   "ocamlformat-rpc-lib" {with-test & = version}
-  "ocp-indent"
+  "ocp-indent" {>= "1.8.0"}
   "re" {>= "1.10.3"}
   "stdio"
   "uuseg" {>= "10.0.0"}
