--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -9,7 +9,7 @@ homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "ocaml" {>= "4.08"}
-  "alcotest" {with-test}
+  "alcotest" {with-test & >= "1.3.0"}
   "base" {>= "v0.12.0"}
   "cmdliner" {>= "1.1.0"}
   "dune" {>= "2.8"}
@@ -22,7 +22,7 @@ depends: [
   "menhirSdk" {>= "20201216"}
   "ocaml-version" {>= "3.5.0"}
   "ocamlformat-rpc-lib" {with-test & = version}
-  "ocp-indent"
+  "ocp-indent" {>= "1.8.0"}
   "re" {>= "1.10.3"}
   "stdio"
   "uuseg" {>= "10.0.0"}
