--- a/lib-rpc-server/dune
+++ b/lib-rpc-server/dune
@@ -1,4 +1,3 @@
 (library
  (name ocamlformat_rpc)
- (public_name ocamlformat.rpc)
- (libraries vendored_lib ocamlformat.bin_conf ocamlformat.rpc_lib_protocol))
+ (libraries vendored_lib bin_conf ocamlformat.rpc_lib_protocol))
