Sanitize result types

--- a/lib/bin_conf/dune
+++ b/lib/bin_conf/dune
@@ -2,13 +2,7 @@
  (public_name ocamlformat.bin_conf)
  (name bin_conf)
  (flags
-  (:standard
-   -open
-   Ocaml_common
-   -open
-   Ocamlformat_stdlib
-   -open
-   Ocamlformat_result.Global_scope))
+  (:standard -open Ocaml_common -open Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
  (libraries ocamlformat-lib re))
