--- a/ocamlformat-lib.opam
+++ b/ocamlformat-lib.opam
@@ -37,7 +37,7 @@ depends: [
   "uutf" {>= "1.0.1"}
   "csexp" {>= "1.4.0"}
   "astring"
-  "result"
+  "rresult"
   "camlp-streams"
   "odoc" {with-doc}
 ]
