Sanitize result types (#2444)

--- a/lib/dune
+++ b/lib/dune
@@ -23,9 +23,7 @@
    -open
    Parser_extended
    -open
-   Ocamlformat_stdlib
-   -open
-   Ocamlformat_result.Global_scope))
+   Ocamlformat_stdlib))
  (instrumentation
   (backend bisect_ppx))
  (libraries
@@ -33,7 +31,6 @@
   ocaml_common
   parser_standard
   parser_extended
-  ocamlformat_result
   ocamlformat_stdlib
   ocaml-version
   ocp-indent.lib
