fix test suite deps

--- a/test/disabled/dune
+++ b/test/disabled/dune
@@ -1,6 +1,7 @@
 (rule
  (alias runtest)
  (deps
+  (package ocamlformat-dev)
   (source_tree dir1))
  (package ocamlformat)
  (enabled_if
@@ -11,6 +12,7 @@
 (rule
  (alias runtest)
  (deps
+  (package ocamlformat-dev)
   (source_tree dir1))
  (package ocamlformat)
  (enabled_if
